--- a/docRestApi/paths/pay/ReviewChrgPassHdr.yaml
+++ b/docRestApi/paths/pay/ReviewChrgPassHdr.yaml
@@ -5,7 +5,7 @@ get:
   description: " 。。。。"
 
   parameters:
-    - name: endToEndId
+    - name: transactionId
       in: query
       description: "充值单id"
       required: true
