--- a/docRestApi/paths/pay/recharge.yml
+++ b/docRestApi/paths/pay/recharge.yml
@@ -11,7 +11,7 @@ get:
   parameters:
     #- $ref: "#/components/parameters/ClientIdHeader"
     - in: query
-      name: instdAmt
+      name: amount
       required: true
       schema:
         type: integer
