--- a/docRestApi/paths/wlt/ListInsFdPoolLogHdl.yaml
+++ b/docRestApi/paths/wlt/ListInsFdPoolLogHdl.yaml
@@ -1,6 +1,6 @@
 get:
   tags:
-    - Wallet
+    - Account
   summary: " 钱包方面接口 保险资金池记录列表"
   description: " 。。。。"
   operationId: "ListInsFdPoolLogHdl"
