--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -389,10 +389,10 @@ paths:
         '200':
           description: 成功响应
 
-  /api/password/reset/request:
+  /password/reset/request:
     get:
-      summary: Get security question by username
-      description: Returns the user's predefined security question (no answer)
+      summary: 请求充值密码-获取问题 security question by username
+      description: 
       parameters:
       - name: username
         in: query
@@ -414,10 +414,10 @@ paths:
         '404':
           description: User not found
 
-  /api/password/reset/confirm:
+  /password/reset/confirm:
     post:
-      summary: Reset password using security question
-      description: Submit answer to security question and new password
+      summary: 重置密码by安全问题
+      description: 
       requestBody:
         required: true
         content:
@@ -456,8 +456,8 @@ paths:
 
   /api/security-question/setup:
     post:
-      summary: Setup security question
-      description: Allow users to set up a security question and answer
+      summary: 设置安全问题与答案
+      description:  
       requestBody:
         required: true
         content:
