--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -135,6 +135,28 @@ paths:
       tags:
         - agt
       summary: " 查询代理上级"
+      responses:
+        "200":
+          $ref: './components/responses/CommonResponse.yaml'
+
+  /role/FindRoleHdl:
+    get:
+      tags:
+        - role
+      summary: " "
+      responses:
+        "200":
+          $ref: './components/responses/CommonResponse.yaml'
+
+  /role/DelRoleHdl:
+    get:
+      tags:
+        - role
+      summary: " "
+      responses:
+        "200":
+          $ref: './components/responses/CommonResponse.yaml'
+
   /admin/role/ListRolesHdl:
    $ref: './paths/role/ListRolesHdl.yaml'
   /admin/role/SaveRolesHdl:
