--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,15 @@
 
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/com.github.sealedtx/java-youtube-downloader -->
+        <!-- https://mvnrepository.com/artifact/com.github.sealedtx/java-youtube-downloader -->
+        <dependency>
+            <groupId>com.github.sealedtx</groupId>
+            <artifactId>java-youtube-downloader</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>junit</groupId>
