--- a/pom.xml
+++ b/pom.xml
@@ -65,19 +65,19 @@
 
 
     <dependencies>
-
-
-
+        <!-- jOOQ Core -->
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq</artifactId>
+            <version>3.18.6</version> <!-- 可替换为最新版本 -->
+        </dependency>
 
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
