--- a/docRestApi/paths/admin/adm/list.yaml
+++ b/docRestApi/paths/admin/adm/list.yaml
@@ -1,20 +1,14 @@
 get:
   tags:
     - admin
-  summary: "add管理员用户的方法"
+  summary: ""
   description: " 。。。。"
-  operationId: " "
+
   parameters:
     - name: uname
       in: query
       description: "用户名"
-      required: true
-      schema:
-        type: string
-    - name: pwd
-      in: query
-      description: "密码"
-      required: true
+      required: false
       schema:
         type: string
 
