--- a/docRestApi/paths/admin/adm/add.yaml
+++ b/docRestApi/paths/admin/adm/add.yaml
@@ -3,15 +3,15 @@ get:
     - admin
   summary: "add管理员用户的方法"
   description: " 。。。。"
-  operationId: " "
+
   parameters:
-    - name: uname
+    - name: username
       in: query
       description: "用户名"
       required: true
       schema:
         type: string
-    - name: pwd
+    - name: password
       in: query
       description: "密码"
       required: true
