--- a/docRestApi/paths/admin/adm/logout.yaml
+++ b/docRestApi/paths/admin/adm/logout.yaml
@@ -1,22 +1,10 @@
 get:
   tags:
     - admin
-  summary: "add管理员用户的方法"
-  description: " 。。。。"
-  operationId: " "
-  parameters:
-    - name: uname
-      in: query
-      description: "用户名"
-      required: true
-      schema:
-        type: string
-    - name: pwd
-      in: query
-      description: "密码"
-      required: true
-      schema:
-        type: string
+  summary: ""
+
+
+
 
   responses:
     "200":
