--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -472,23 +472,58 @@ paths:
     get:
       tags:
         - Account
-      summary: "资金调整 中心钱包"
+      summary: "资金调整 钱包"
       parameters:
-        - name: adjustType
+        - name: accountSubType
           in: query
           required: true
-          description: "调整类型 增加+  减去-"
           schema:
             type: string
-            example: "+"
+            enum: [ EMoney, GeneralInvestment ]
+          description: |
+            额度类型账户（如：本金、奖励金等）
+            - EMoney: 本金钱包
+            - GeneralInvestment: 投资账户盈利钱包
+          example: EMoney
 
-        - name: changeAmount
+        - name: transactionCode
           in: query
           required: true
-          description: "改改的金额  "
           schema:
             type: string
-            example: "99"
+            enum: [ CRED, DEBT, frz, unfrz ]
+          description: |
+            调整类型（如：增加、减少、冻结、解冻）
+            - CRED: 加款
+            - DEBT: 扣款
+            - frz: 冻结
+            - unfrz: 解冻
+          example: CRED
+
+        - name: uname
+          in: query
+          required: true
+          schema:
+            type: string
+          description: 会员账号（用户唯一标识）
+          example: user_12345
+
+        - name: adjustAmount
+          in: query
+          required: true
+          schema:
+            type: number
+            format: double
+          description: 调整金额（单位：元）
+          example: 100.00
+
+        - name: remark
+          in: query
+          required: false
+          schema:
+            type: string
+          description: 调整备注
+          example: 手动调账 - 奖励活动
       responses:
         '200':
           description: 成功响应
