--- a/docRestApi/paths/wlt/ListInvtCmsLogHdl.yaml
+++ b/docRestApi/paths/wlt/ListInvtCmsLogHdl.yaml
@@ -1,6 +1,6 @@
 get:
   tags:
-    - AccountYl
+    - AccountInvst
   summary: " 盈利钱包方面接口 邀请佣金列表"
   description: " 。。。。"
   operationId: "ListInvtCmsLogHdl"
