--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -3,12 +3,12 @@
 openapi: 3.0.0
 info:
   title: 用户端 API
-  version: 9.0.1
+  version: 88.0.1
   description: |
-    这是一个用于用户端的 API。通过该 API，可以作为开发。
+    这是一个用于系统的 API。通过该 API，可以作为开发。
     该文档提供了所有可用接口的详细说明。
     用户规范参照了oauth/openid，密码方面规参照 OWASP ，金融账户与交易规范参照open banking/obie v3标准，代理方面为自定模式
-    v420
+    v52
 
   contact:
     name: dddddomas
