--- a/pom.xml
+++ b/pom.xml
@@ -172,12 +172,7 @@
     -->
 
 
-        <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
-        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
         <dependency>
             <groupId>org.jsoup</groupId>
@@ -192,21 +187,6 @@
             <version>3.0.2</version>
         </dependency>
 
-
-        <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.el -->
-        <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>jakarta.el</artifactId>
-            <version>5.0.0-M1</version>
-            <scope>test</scope>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.jetbrains.kotlinx</groupId>
-            <artifactId>kotlinx-serialization-json</artifactId>
-            <version>1.8.0</version>  <!-- 使用最新版本 -->
-        </dependency>
 
 
         <!-- https://mvnrepository.com/artifact/jakarta.inject/jakarta.inject-api -->
@@ -290,25 +270,9 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>org.fusesource.jansi</groupId>
-            <artifactId>jansi</artifactId>
-            <version>2.4.0</version>
-        </dependency>
 
 
-        <dependency>
-            <groupId>org.picocontainer</groupId>
-            <artifactId>picocontainer</artifactId>
-            <version>2.15</version>
-        </dependency>
 
-        <!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>1</version>
-        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.web3j/core -->
         <dependency>
@@ -352,25 +316,6 @@
 
 
 -->
-
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-            <version>9.0.0</version> <!-- 使用适当的版本 -->
-        </dependency>
-
-
-        <dependency>
-            <groupId>jakarta.jms</groupId>
-            <artifactId>jakarta.jms-api</artifactId>
-            <version>3.1.0</version> <!-- 使用适当的版本 -->
-        </dependency>
-
-        <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-            <version>4.19.0</version> <!-- 使用适当的版本 -->
-        </dependency>
 
 
 
@@ -478,11 +423,6 @@
 
 
 
-        <dependency>
-            <groupId>org.javassist</groupId>
-            <artifactId>javassist</artifactId>
-            <version>3.29.2-GA</version>
-        </dependency>
 
         <!-- 用于 JSON 序列化（这里使用 Gson，你可以换成其他库） -->
         <dependency>
@@ -511,11 +451,6 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.43.2.2</version> <!-- Use the latest version available -->
-        </dependency>
 
         <!--
                 <dependency>
@@ -567,12 +502,6 @@
 
         </dependency>
 
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.30</version> <!-- Use the latest version available -->
-        </dependency>
 
 
         <dependency>
@@ -739,43 +668,39 @@
                 </executions>
             </plugin>
 
-            <!--
+
+
+            <!-- Maven Shade Plugin for packaging a fat JAR -->
+            <!-- Maven Shade Plugin for packaging a fat JAR -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.4.1</version>
+
                 <executions>
                     <execution>
-                        <id>default-compile</id>
-                        <phase>none</phase>
-                    </execution>
-                    <execution>
-                        <id>default-testCompile</id>
-                        <phase>none</phase>
-                    </execution>
-                    <execution>
-                        <id>compile</id>
-                        <phase>compile</phase>
+                        <phase>package</phase>
                         <goals>
-                            <goal>compile</goal>
+                            <goal>shade</goal>
                         </goals>
-                    </execution>
-                    <execution>
-                        <id>testCompile</id>
-                        <phase>ztest-compile</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
+                        <configuration>
+                            <!--  -->
+                            <archive>
+                                <manifest>
+                                    <mainClass>MainApi</mainClass> <!-- Replace with your main class -->
+                                </manifest>
+                            </archive>
+                            <transformers>
+
+                            </transformers>
+
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <source>23</source>
-                    <target>23</target>
-
-                    <fork>true</fork>
-                    <compilerArgs>__enable-preview</compilerArgs>
-                </configuration>
             </plugin>
-        -->
+
+
+
         </plugins>
     </build>
 
