--- a/docPrj/DocDeprecated/dep.yml
+++ b/docPrj/DocDeprecated/dep.yml
@@ -83,7 +83,7 @@
   get:
     tags:
       - bet
-    summary: "列出投注记录"
+    summary: "列出投资记录"
     responses:
       "200":
         description: ""
@@ -106,14 +106,14 @@
     get:
       tags:
         - bet
-      summary: 投注
+      summary: 投资
       description: ""
       operationId: getBet
       parameters:
         - name: bettxt
           in: query
           required: true
-          description: "投注内容"
+          description: "投资内容"
           schema:
             type: string
             example: "123"
