--- a/src/core/doc/doc.yaml
+++ b/src/core/doc/doc.yaml
@@ -70,7 +70,7 @@ paths:
     get:
       tags:
         - bet
-      summary: "列出投注记录"
+      summary: "列出投资记录"
       responses:
         "200":
           description: ""
@@ -437,14 +437,14 @@ paths:
     get:
       tags:
         - bet
-      summary: 投注
+      summary: 投资
       description: ""
       operationId: getBet
       parameters:
         - name: bettxt
           in: query
           required: true
-          description: "投注内容"
+          description: "投资内容"
           schema:
             type: string
             example: "123"
