--- a/pom.xml
+++ b/pom.xml
@@ -628,7 +628,11 @@
                         <configuration>
                             <outputDirectory>${project.build.directory}/static</outputDirectory>
                             <resources>
-
+                                <resource>
+                                    <directory>${project.basedir}/docRestApi</directory>
+                                    <filtering>false</filtering>
+                                    <targetPath>../classes/docRestApi</targetPath>
+                                </resource>
                                 <resource>
                                     <directory>${project.basedir}/static</directory>
                                     <filtering>false</filtering>
