--- a/pom.xml
+++ b/pom.xml
@@ -68,12 +68,13 @@
         </dependency>
 
 
+
+
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>10.0.0</version>
         </dependency>
-
-
 
 
 
@@ -433,10 +434,11 @@
 
 
         <dependency>
-            <groupId>p6spy</groupId>
-            <artifactId>p6spy</artifactId>
-            <version>3.9.1</version>  <!-- 请使用最新版本 -->
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.9.0</version> <!-- 使用最新版本 -->
         </dependency>
+
 
 
 
