--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -212,7 +212,7 @@ paths:
     $ref: './paths/wlt/ListInsFdPoolLogHdl.yaml'
   /wlt/ListInvtCmsLogHdl:
     $ref: './paths/wlt/ListInvtCmsLogHdl.yaml'
-  /wlt/ListBetWinLogHdl:
+  /wlt/ListIvstProfitHdl:
     $ref: './paths/wlt/ListBetWinLogHdl.yaml'
   /admin/wlt/QueryOrdChrgHdr:
     $ref: './paths/pay/QueryOrdChrgHdr.yaml'
@@ -507,14 +507,14 @@ paths:
           required: true
           schema:
             type: string
-            enum: [ CRED, DEBT, frz, unfrz ]
+            enum: [ AdjustmentCredit, AdjustmentDebit, adjst_frz, adjust_unfrz ]
           description: |
             调整类型（如：增加、减少、冻结、解冻）
-            - CRED: 加款
-            - DEBT: 扣款
-            - frz: 冻结
-            - unfrz: 解冻
-          example: CRED
+            - AdjustmentCredit: 加款
+            - AdjustmentDebit: 扣款
+            - adjst_frz: 冻结
+            - adjust_unfrz: 解冻
+          example: AdjustmentCredit
 
         - name: uname
           in: query
