--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -225,6 +225,29 @@ paths:
         "200":
           $ref: './components/responses/CommonResponse.yaml'
 
+  /cms/WthdrCmsHdl:
+    get:
+      tags:
+        - cms
+      summary: "提取佣金"
+      parameters:
+        - name: uname
+          in: query
+          required: false
+          schema:
+            type: string
+          description:
+          example: "666"
+        - name: amt
+          in: query
+          required: true
+          schema:
+            type: int
+          description:
+          example: 100
+      responses:
+        "200":
+          $ref: './components/responses/CommonResponse.yaml'
 
   /admin/QryFundDetailHdl:
     get:
