--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
     </modules>
 
     <properties>
-        <kotlin.compiler.language.version>1.8</kotlin.compiler.language.version>
-        <kotlin.compiler.api.version>1.8</kotlin.compiler.api.version>
+
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -41,9 +40,10 @@
 
         <xxljob.version>2.1.2</xxljob.version>
         <aspect.version>1.8.13</aspect.version>
-        <kotlin.version>2.1.20</kotlin.version>
-    </properties>
 
+
+
+    </properties>
 
 
     <repositories>
@@ -63,10 +63,7 @@
     </repositories>
 
 
-
     <dependencies>
-
-
 
 
         <!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
@@ -76,7 +73,7 @@
             <version>4.0.2</version>
         </dependency>
 
-        
+
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-jcache -->
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-jcache -->
         <dependency>
@@ -92,10 +89,6 @@
         </dependency>
 
 
-
-
-
-
         <!-- https://mvnrepository.com/artifact/javax.cache/cache-api -->
         <dependency>
             <groupId>javax.cache</groupId>
@@ -104,12 +97,61 @@
         </dependency>
 
 
-
         <!-- Spring Data JPA -->
         <dependency>
             <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jpa</artifactId>
+            <artifactId>spring-data-commons</artifactId>
             <version>3.2.3</version> <!-- 对应 Hibernate 6.x -->
+            <exclusions>
+                <!-- Spring Core Dependencies -->
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-data-jpa</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-beans</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-context</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-aop</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-jcl</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-expression</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-tx</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-orm</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-dao</artifactId>
+                </exclusion>
+
+
+                <!-- 其他可能的依赖 -->
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-messaging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 
@@ -119,24 +161,6 @@
             <version>6.0.0</version>  <!-- 或使用 5.0.0 看你的兼容性需求 -->
 
         </dependency>
-
-
-        <!-- jOOQ Core -->
-        <dependency>
-            <groupId>org.jooq</groupId>
-            <artifactId>jooq</artifactId>
-            <version>3.18.6</version> <!-- 可替换为最新版本 -->
-        </dependency>
-
-
-
-
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-            <version>10.0.0</version>
-        </dependency>
-
 
 
         <dependency>
@@ -234,7 +258,6 @@
     -->
 
 
-
         <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
         <dependency>
             <groupId>org.jsoup</groupId>
@@ -248,8 +271,6 @@
             <artifactId>jakarta.validation-api</artifactId>
             <version>3.0.2</version>
         </dependency>
-
-
 
 
         <!-- https://mvnrepository.com/artifact/jakarta.inject/jakarta.inject-api -->
@@ -333,10 +354,6 @@
         </dependency>
 
 
-
-
-
-
         <!-- https://mvnrepository.com/artifact/org.web3j/core -->
         <dependency>
             <groupId>org.web3j</groupId>
@@ -350,9 +367,6 @@
             <artifactId>crypto</artifactId>
             <version>5.0.0</version>
         </dependency>
-
-
-
 
 
         <!-- SLF4J API -->
@@ -381,9 +395,6 @@
 -->
 
 
-
-
-
         <dependency>
             <groupId>org.opensaml</groupId>
             <artifactId>opensaml-core</artifactId>
@@ -394,8 +405,6 @@
             <artifactId>opensaml-saml-api</artifactId>
             <version>4.0.1</version>
         </dependency>
-
-
 
 
         <dependency>
@@ -472,19 +481,11 @@
         </dependency>
 
 
-
-
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
-
-
-
-
-
-
 
 
         <!-- 用于 JSON 序列化（这里使用 Gson，你可以换成其他库） -->
@@ -495,22 +496,18 @@
         </dependency>
 
 
-    <!-- H2 数据库驱动 -->
-    <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <version>2.2.224</version>
-    </dependency>
+        <!-- H2 数据库驱动 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
             <version>2.9.0</version> <!-- 使用最新版本 -->
         </dependency>
-
-
-
-
 
 
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
@@ -520,7 +517,6 @@
             <version>6.6.5.Final</version>
 
         </dependency>
-
 
 
         <!--
@@ -552,27 +548,13 @@
         </dependency>
 
 
-
         <!-- MySQL JDBC Driver -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version> <!-- Use the latest version -->
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.datanucleus/datanucleus-api-jdo -->
-        <dependency>
-            <groupId>org.datanucleus</groupId>
-            <artifactId>datanucleus-api-jdo</artifactId>
-            <version>6.0.4</version>
-        </dependency>
 
-        <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>your-artifact-id</artifactId>
-            <version>1.0.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/libjar/mysql-connector-j-8.2.0.jar</systemPath>
-        </dependency>
         <!-- JPA 3.1 API -->
         <dependency>
             <groupId>jakarta.persistence</groupId>
@@ -580,7 +562,6 @@
             <version>3.1.0</version>
 
         </dependency>
-
 
 
         <dependency>
@@ -670,8 +651,6 @@
             </plugin>
 
 
-
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -710,10 +689,6 @@
                                 </resource>
 
 
-
-
-
-
                                 <!-- 复制 src 目录下的 properties 文件 -->
                                 <resource>
                                     <directory>${project.basedir}/src</directory>
@@ -747,8 +722,8 @@
                 </executions>
             </plugin>
 
-           
-  <!-- Maven Shade Plugin for packaging a fat JAR -->
+
+            <!-- Maven Shade Plugin for packaging a fat JAR -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -785,7 +760,6 @@
                     </execution>
                 </executions>
             </plugin>
-
 
 
         </plugins>
