--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -3,12 +3,12 @@
 openapi: 3.0.0
 info:
   title: 用户端 API
-  version: 88.0.1
+  version: 89.v250510
   description: |
     这是一个用于系统的 API。通过该 API，可以作为开发。
     该文档提供了所有可用接口的详细说明。
     用户规范参照了oauth/openid，密码方面规参照 OWASP ，金融账户与交易规范参照open banking/obie v3标准，代理方面为自定模式
-    v52
+    
 
   contact:
     name: dddddomas
@@ -102,6 +102,7 @@ paths:
       responses:
         "200":
           $ref: './components/responses/CommonResponse.yaml'
+
 
   /wlt/ListTrsxBnsHdl:
      $ref: './paths/wlt/ListTrsxBnsHdl.yml'
