--- a/pom.xml
+++ b/pom.xml
@@ -328,24 +328,12 @@
             <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.9.3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>5.8.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
-            <version>5.2.0</version>
-            <scope>test</scope>
-        </dependency>
+
+
+
+ 
+
+
 
 
         <!-- https://mvnrepository.com/artifact/org.web3j/core -->
@@ -371,12 +359,7 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
+
 
         <!-- Logback 作为默认日志实现
         <dependency>
@@ -445,27 +428,8 @@
         </dependency>
 
 
-        <!-- JUnit 5 -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.9.3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.9.3</version>
-            <scope>test</scope>
-        </dependency>
 
-        <!-- MockK（用于模拟对象，类似 Mockito） -->
-        <dependency>
-            <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
-            <version>1.13.4</version>
-            <scope>test</scope>
-        </dependency>
+
 
 
         <dependency>
@@ -565,15 +529,36 @@
         </dependency>
 
 
-    </dependencies>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.7.2</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>3.11.2</version>
+        <scope>test</scope>
+    </dependency>
+
+
+</dependencies>
 
     <build>
+
+
+
+            <testSourceDirectory>testSrc</testSourceDirectory>
 
         <sourceDirectory>src</sourceDirectory> <!-- Custom source directory -->
 
         <resources>
             <resource>
                 <directory>cfg</directory>
+            </resource>
+            <resource>
+                <directory>res</directory>
             </resource>
         </resources>
 
